MAT-7960: Update to valueset batch endpoint (#119)
* MAT-7960: update valuesets to batch endpoint and set maxidle time

* MAT-7960: split method for checkstyle

* MAT-7960: code cleanup

* MAT-7960: code conflict resolution

* MAT-7960: fix build

* MAT-7960: fix existing valueset check